--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,7 @@ transform-origin: top left;
 	.social{
 		left:0%;
 		bottom: 10px;
+		padding: 10px;
 		position: relative;
 		text-align: center;
 		margin-top: 70px;
