--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,11 @@ transform-origin: top left;
 	}
 	.email_signup_form{
 		margin-top: 70px;
+		width: 320px;
 	}
+	.email_signup_form form input[type="text"] {
+	width:200px;
+}
 	.social{
 		left:0%;
 		bottom: 10px;
