Adjusting media queries

--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,7 @@ transform-origin: top left;
 	}
 	.email_signup_form form input[type="text"] {
 	width:200px;
+	font-size: 15px;
 }
 	.social{
 		left:0%;
