--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ body{
 	margin-left: -45px;
     -webkit-appearance:none;
     border-right: 1px solid #6E6C6C;
-    font-family: 'Lato';
+    font-family: 'Open Sans';
 	font-weight: 300;
 }
 .email_signup_form form input[type="text"]:focus{
@@ -146,7 +146,7 @@ transform-origin: top left;
 }
 
 .blog a {
-	font-family: 'Lato';
+	font-family: 'Open Sans';
 	font-size: 22px;
 	height: 30px;
 	font-weight: 300;
