--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ img{max-width:100% !important; height: auto;}
 }
 body{
 	background:url(../images/backgroundimage4.png);
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -51,9 +51,9 @@ body{
 
 #tagline{
 	text-align: center;
-	font-family: 'Open Sans';
+	font-family: 'Lato';
 	font-size: 38px;
- 	font-weight: 300;
+ 	font-weight: 100;
  	max-width: 900px;
  	text-align: center;
  	color:#fff;
@@ -96,7 +96,7 @@ body{
 	margin-left: -45px;
     -webkit-appearance:none;
     border-right: 1px solid #6E6C6C;
-    font-family: 'Open Sans';
+    font-family: 'Lato';
 	font-weight: 300;
 }
 .email_signup_form form input[type="text"]:focus{
@@ -146,7 +146,7 @@ transform-origin: top left;
 }
 
 .blog a {
-	font-family: 'Open Sans';
+	font-family: 'Lato';
 	font-size: 22px;
 	height: 30px;
 	font-weight: 300;
