--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body{
 
 #tagline{
 	text-align: center;
-	font-family: 'Lato';
+	font-family: 'Roboto';
 	font-size: 38px;
  	font-weight: 100;
  	max-width: 900px;
