--- a/css/main.css
+++ b/css/main.css
@@ -174,10 +174,13 @@ transform-origin: top left;
 
 }
 @media only screen and (max-width: 1280px){
-
+	body{
+		background-size: auto;
+		background-position: center center;
+	}
 }
 @media all and (max-width: 1024px){
- 		body{
+ 	body{
 		background-size: auto;
 		background-position: center center;
 	}
